testsuite/tests/semantic_errors/one_statement_two_errors/test.adb
procedure Test is
   procedure Foo (X : Integer; Y : Boolean) is null;
begin
   Foo (True, 2 + 2);
   pragma Test_Statement;
end Test;
