testsuite/tests/semantic_errors/one_statement_two_errors/test.out
Analyzing test.adb
##################

Resolving xrefs for node <CallStmt test.adb:4:4-4:22>
*****************************************************

test.adb:4:17: error: no matching operator found
4 |    Foo (True, 2 + 2);
  |                 ^


Expected name resolution failure for node <CallStmt test.adb:4:4-4:22>


Done.
